# elmo-backend

./: .gitignore  alembic.ini  app.py  pyproject.toml  readme.md  secrets.py.example
alembic/versions/: 99584cbcbf06_add_route_limit.py
elm/: elm.json  index.html  style.css
elm/src/: Heatmap.elm  Main.elm  Route.elm  User.elm
elmo/: models.py  strava.py
python/: app.py  models.py  requirements.txt  secrets.py  strava.py
scripts/: init_db.py
