[tool.poetry]
name = "elmo"
version = "0.1.0"
description = "Python Strava API Wrapper"
authors = ["Robin Hutmacher <robin.hutmacher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
requests = "^2.25.1"
gunicorn = "^20.0.4"
polyline = "^1.4.0"
SQLAlchemy = "^1.3.23"
Flask-SQLAlchemy = "^2.4.4"
strava-api-v3 = {url = "https://github.com/hutec/strava-api/releases/download/v1.0.0/strava_api_v3-1.0.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
