[tool.poetry]
name = "elmo"
version = "0.1.0"
description = "Python Strava API Wrapper"
authors = ["Robin Hutmacher <robin.hutmacher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.3"
requests = "^2.31.0"
gunicorn = "^20.0.4"
polyline = "^2.0.0"
SQLAlchemy = "^2.0.21"
Flask-SQLAlchemy = "^3.1.1"
strava-api-v3 = {url = "https://github.com/hutec/strava-api/releases/download/v1.0.0/strava_api_v3-1.0.0-py3-none-any.whl"}
Flask-Executor = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[tool.ruff]
select = ["E", "F", "I001", "B"]

ignore = ["E501", "D107", "D203", "D212", "D213", "D402", "D413", "D415", "D416", "D417"]

line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
